[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/graphics/character_creation/William_Sparx.PNG" type="Texture" id=1]
[ext_resource path="res://assets/fonts/ConnectionSerif.otf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/graphics/encounter/background.jpg" type="Texture" id=3]
[ext_resource path="res://src/Modes/Encounter/Dialogue/UI/DialogueBox.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/dialogue/blip.wav" type="AudioStream" id=5]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 2 )

[node name="DialogueBox" type="MarginContainer"]
margin_left = -1.0
margin_right = 336.0
margin_bottom = 323.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
show_portrait = false

[node name="DialogueBackground" type="ColorRect" parent="."]
margin_right = 337.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_vertical = 3
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueContainer" type="HBoxContainer" parent="."]
margin_right = 337.0
margin_bottom = 323.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextBox" type="ScrollContainer" parent="DialogueContainer"]
margin_right = 337.0
margin_bottom = 323.0
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="DialogueContainer/TextBox"]
margin_right = 325.0
margin_bottom = 1005.0
size_flags_horizontal = 3
size_flags_vertical = 7
custom_fonts/font = SubResource( 1 )
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus nulla dolor, convallis et maximus ac, accumsan in massa. Nunc pellentesque, dui quis semper ultricies, metus nunc porttitor turpis, nec bibendum quam ante ut magna. Donec posuere eget erat ac finibus. Pellentesque condimentum dui a neque pharetra ultricies. Aliquam pellentesque ac diam nec tristique. Maecenas nec purus urna. Aenean non nisi lobortis, volutpat mi nec, varius dui. Quisque sit amet nisi viverra, sagittis justo non, iaculis orci. Mauris a nibh vitae magna pulvinar pretium iaculis sed nunc. Aliquam nec risus condimentum, vulputate velit id, hendrerit turpis. Nulla efficitur vel neque at posuere."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PortraitBackground" type="TextureRect" parent="DialogueContainer"]
visible = false
margin_left = 855.0
margin_right = 1281.0
margin_bottom = 323.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.5
texture = ExtResource( 3 )
expand = true
stretch_mode = 7

[node name="CharacterPortrait" type="TextureRect" parent="DialogueContainer/PortraitBackground"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.5
margin_top = -160.0
margin_right = 135.5
margin_bottom = 160.0
texture = ExtResource( 1 )
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DialogueTimer" type="Timer" parent="."]
one_shot = true

[node name="Voice" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -22.639
mix_target = 2
bus = "Voice"
